# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

AUTOMAKE_OPTIONS 	= subdir-objects
SUBDIRS                 = . 
AM_CFLAGS 		= $(curl_CFLAGS) $(curl_CFLAGS)
bin_PROGRAMS            = turtle2remote
turtle2remote_SOURCES   = src/turtle2remote.c

turtle2remote_LDADD     = $(curl_LIBS) $(curl_LIBS)
